[package]
name = "rustlex"
version = "0.3.1"
authors = ["Leo Testard <leo.testard@gmail.com>", "Mathieu Poumeyrol <kali@zoy.org>"]
description = "Lexical analysers generator for Rust, written in Rust"
homepage = "https://github.com/LeoTestard/rustlex"
repository = "https://github.com/LeoTestard/rustlex"
readme = "README.md"
keywords = [ "lexer", "lexical", "analyser", "generator" ]
license = "MIT"


[features]
default     = []


[lib]
name = "rustlex"
crate-type = ["dylib"]

[dependencies]
rustlex_codegen = { version = "*", path = "codegen" }
syntex        = { version = "^0.26.0", optional = true }
