[package]
name = "rustlex_codegen"
version = "0.3.1"
authors = ["Leo Testard <leo.testard@gmail.com>"]
description = "Syntex extension for RustLex"
homepage = "https://github.com/LeoTestard/rustlex"
repository = "https://github.com/LeoTestard/rustlex"
keywords = [ "lexer", "lexical", "analyser", "generator" ]
license = "MIT"
build = "build.rs"

[lib]
name = "rustlex_codegen"

[build-dependencies]
quasi_codegen = { version = "^0.4.0" }
syntex        = { version = "^0.26.0"}

[dependencies]
bit-set = "^0.3.0"
log = "^0.3.5"
fsa = { path = "../fsa" }
quasi         = { version = "^0.4.0" }
syntex        = { version = "^0.26.0" }
syntex_syntax = { version = "^0.26.0" }
