[package]
name = "fsa"
version = "0.3.1"
authors = ["Leo Testard <leo.testard@gmail.com>"]
description = "Library for manipulating (deterministic) finite automata"
homepage = "https://github.com/LeoTestard/rustlex"
repository = "https://github.com/LeoTestard/rustlex"
keywords = [ "finite", "state", "machine", "automata", "automaton" ]
license = "MIT"

[lib]
name = "fsa"

[dependencies]
bit-set = "*"
