[package]
name = "test"
version = "0.0.0"
build = "build.rs"

[build-dependencies]
rustlex         = { version = "*", path = "../.."}
rustlex_codegen = { version = "*", path = ".."}
syntex          = { version = "^0.26.0" }

[dependencies]
rustlex         = { version = "*", path = "../.." }
rustlex_codegen = { version = "*", path = ".." }
